--- a/shoppinglist/pom.xml
+++ b/shoppinglist/pom.xml
@@ -31,6 +31,20 @@
             <artifactId>bootstrapfx-core</artifactId>
             <version>0.2.2</version>
         </dependency>
+
+        <!-- testing -->
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.testfx</groupId>
+            <artifactId>testfx-junit</artifactId>
+            <version>4.0.10-alpha</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
