toggle running the UI tests

--- a/shoppinglist/pom.xml
+++ b/shoppinglist/pom.xml
@@ -68,11 +68,37 @@
         <sourceDirectory>src/main/scala</sourceDirectory>
         <testSourceDirectory>src/test/scala</testSourceDirectory>
 
-        <!--<plugins>-->
+        <plugins>
             <!--<plugin>-->
                 <!--<groupId>org.scalatest</groupId>-->
                 <!--<artifactId>scalatest-maven-plugin</artifactId>-->
             <!--</plugin>-->
-        <!--</plugins>-->
+
+            <plugin>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.20.1</version>
+                <configuration>
+                    <excludedGroups>${testcase.groups}</excludedGroups>
+                </configuration>
+            </plugin>
+        </plugins>
     </build>
+
+    <profiles>
+        <profile>
+            <id>with-ui-tests</id>
+            <properties>
+                <testcase.groups/>
+            </properties>
+        </profile>
+        <profile>
+            <id>default</id>
+            <properties>
+                <testcase.groups>com.github.rvanheest.shoppinglist.UITest</testcase.groups>
+            </properties>
+            <activation>
+                <activeByDefault>true</activeByDefault>
+            </activation>
+        </profile>
+    </profiles>
 </project>
