rename and split mvi project

--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
         <module>shoppinglist</module>
         <module>shoppinglistscalafx</module>
         <module>mvi</module>
+        <module>mvilib</module>
     </modules>
 
     <properties>
