--- a/bmicalculator/pom.xml
+++ b/bmicalculator/pom.xml
@@ -10,7 +10,7 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>mvi</artifactId>
+    <artifactId>bmicalculator</artifactId>
 
     <dependencies>
         <!-- Reactive Programming -->
@@ -30,6 +30,11 @@
             <groupId>org.controlsfx</groupId>
             <artifactId>controlsfx</artifactId>
             <version>8.40.14</version>
+        </dependency>
+        <dependency>
+            <groupId>com.github.rvanheest</groupId>
+            <artifactId>mvi-lib</artifactId>
+            <version>1.0-SNAPSHOT</version>
         </dependency>
 
         <!-- CSS -->
