--- a/pom.xml
+++ b/pom.xml
@@ -10,10 +10,11 @@
     <packaging>pom</packaging>
 
     <modules>
+        <module>bmicalculator</module>
+        <module>mvilib</module>
         <module>shoppinglist</module>
         <module>shoppinglistscalafx</module>
-        <module>mvi</module>
-        <module>mvilib</module>
+        <module>shoppinglistmvi</module>
     </modules>
 
     <properties>
@@ -59,22 +60,22 @@
             </plugin>
         </plugins>
 
-        <!--<pluginManagement>-->
-            <!--<plugins>-->
-                <!--<plugin>-->
-                    <!--<groupId>org.scalatest</groupId>-->
-                    <!--<artifactId>scalatest-maven-plugin</artifactId>-->
-                    <!--<version>${scalatest-maven-plugin.version}</version>-->
-                    <!--<executions>-->
-                        <!--<execution>-->
-                            <!--<id>test</id>-->
-                            <!--<goals>-->
-                                <!--<goal>test</goal>-->
-                            <!--</goals>-->
-                        <!--</execution>-->
-                    <!--</executions>-->
-                <!--</plugin>-->
-            <!--</plugins>-->
-        <!--</pluginManagement>-->
+        <pluginManagement>
+            <plugins>
+                <plugin>
+                    <groupId>org.scalatest</groupId>
+                    <artifactId>scalatest-maven-plugin</artifactId>
+                    <version>${scalatest-maven-plugin.version}</version>
+                    <executions>
+                        <execution>
+                            <id>test</id>
+                            <goals>
+                                <goal>test</goal>
+                            </goals>
+                        </execution>
+                    </executions>
+                </plugin>
+            </plugins>
+        </pluginManagement>
     </build>
 </project>
